[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.9"
fast-float = "0.2"
memchr = "2.7"
memmap = "0.7"
rayon = "1.10"
rustc-hash = "2.0"
smol_str = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "measurements_benchmark"
harness = false
